Feat/user endpoints (#2)
* feat: user endpoints

---------
